# functional-fortran

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  fpm.toml
.github/workflows/: ci.yml
src/: functional.f90  mod_interfaces.f90
src/lib/: mod_functional.f90  mod_interfaces.f90
src/tests/: mod_testing.f90  test_arange.f90  test_arrstr.f90  test_complement.f90  test_empty.f90  test_filter.f90  test_foldl.f90  test_foldr.f90  test_foldt.f90  test_head.f90  test_init.f90  test_insert.f90  test_intersection.f90  test_iterfold.f90  test_last.f90  test_limit.f90  test_map.f90  test_reverse.f90  test_set.f90  test_sort.f90  test_split.f90  test_strarr.f90  test_subscript.f90  test_tail.f90  test_unfold.f90  test_union.f90
test/: test_arange.f90  test_arrstr.f90  test_complement.f90  test_empty.f90  test_filter.f90  test_foldl.f90  test_foldr.f90  test_foldt.f90  test_head.f90  test_init.f90  test_insert.f90  test_intersection.f90  test_iterfold.f90  test_last.f90  test_limit.f90  test_map.f90  test_reverse.f90  test_set.f90  test_sort.f90  test_split.f90  test_strarr.f90  test_subscript.f90  test_tail.f90  test_unfold.f90  test_union.f90  testing.f90
